# servidor_basico

./: .env  Cargo.toml  README.md
archivos_sql/: DATABASE.sql
src/: main.rs  main.txt
src/routes/: farmacia.rs  medicamento.rs  mod.rs
src/templates/: cabecera.html  inicio.html  pie.html  version.html
src/templates/farmacias/: F-cabecera.html  F-crear.html  F-editar.html  F-mostrar.html
src/templates/medicamentos/: M-cabecera.html  M-crear.html  M-editar.html  M-mostrar.html
static/css/: style.css
