[package]
name = "servidor_basico"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["full"] }
actix-files = "0.6"
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "bigdecimal"] }
dotenv = "0.15"

